...
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_form">

            <Spinner
                android:id="@+id/spinner_meses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/meses"
                android:layout_weight="0.4" />

            <Spinner
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/anos"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/btn_filtrar_producao"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_search"
                android:drawableLeft="@drawable/ic_search"
                android:onClick="filtrarRegistros"
                android:textSize="18sp" />
...
